updating localization, also fix for MID-1370

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageLogging_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageLogging_en_US.utf8.properties
@@ -1,20 +1,4 @@
-#
-# Copyright (c) 2010-2013 Evolveum
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
-#Tue Jan 08 13:00:55 CET 2013
+#Thu May 30 10:05:31 CEST 2013
 ProfilingLevel.ARGUMENTS=Arguments
 ProfilingLevel.ENTRY_EXIT=Entry/Exit
 ProfilingLevel.OFF=Off
@@ -35,7 +19,7 @@ pageLogging.appenders.maxHistory=Max. history
 pageLogging.appenders.name=Name
 pageLogging.appenders.pattern=Pattern
 pageLogging.audit=Audit
-pageLogging.auditLog=Audit log\:
+pageLogging.auditLog=Audit to log file:
 pageLogging.button.addClassLogger=Add logger
 pageLogging.button.addComponentLogger=Add component logger
 pageLogging.button.addConsoleAppender=Add console appender
@@ -47,7 +31,7 @@ pageLogging.button.deleteFilter=Delete filter
 pageLogging.button.deleteLogger=Delete logger
 pageLogging.button.reset=Reset
 pageLogging.button.save=Save
-pageLogging.details=Details\:
+pageLogging.details=Details:
 pageLogging.filter=Filter
 pageLogging.filter.ALL=All
 pageLogging.filter.GUI=Web filter
