--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/PageAdmin_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/PageAdmin_sk_SK.utf8.properties
@@ -1,20 +1,4 @@
-#
-# Copyright (c) 2010-2013 Evolveum
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
-#Tue Apr 30 12:43:33 CEST 2013
+#Thu May 30 10:05:25 CEST 2013
 pageAdmin.configuration=Konfigurácia
 pageAdmin.configuration.description=Zabezpečenie, logovanie, import
 pageAdmin.home=Domov
@@ -43,11 +27,13 @@ pageTask.scheduleValidation.invalidCronSpecification='Cron-like specification' i
 pageTask.scheduleValidation.neitherIntervalNorCron=Exactly one of 'Schedule interval' and 'Cron-like specification' must be specified.
 pageTask.scheduleValidation.noInterval='Schedule interval' must be specified.
 pageTasks.category.AllCategories=All categories
+pageTasks.category.Cleanup=Cleanup
 pageTasks.category.Demo=Demo
 pageTasks.category.ImportFromFile=Import from file
 pageTasks.category.ImportingAccounts=Importing accounts
 pageTasks.category.LiveSynchronization=Live synchronization
 pageTasks.category.Reconciliation=Reconciliation
+pageTasks.category.System=System
 pageTasks.category.UserRecomputation=User recomputation
 pageTasks.category.Workflow=Workflow
 pageTasks.runsContinually=runs continually
