--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/reports/PageReports_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/reports/PageReports_sk_SK.utf8.properties
@@ -1,36 +1,15 @@
-#
-# Copyright (c) 2010-2013 Evolveum
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
-#Mon Dec 03 22:55:29 CET 2012
+#Thu May 30 10:05:25 CEST 2013
+PageReports.message.jasperError=Error occurred during creating Jasper report.
+PageReports.message.resourceNotDefined=Resource not defined.
+PageReports.message.unknownReport=Unknown report.
+PageReports.report.auditDescription=Report made from audit records.
+PageReports.report.auditName=Audit logs
+PageReports.report.reconciliationDescription=Reconciliation report for selected resource.
+PageReports.report.reconciliationName=Reconciliation
+PageReports.report.usersDescription=Users listed in MidPoint.
+PageReports.report.usersName=Users in MidPoint
+PageReports.table.description=Description
+PageReports.table.name=Name
+PageReports.title.auditPopup=Audit report parameters
+PageReports.title.reconciliationPopup=Reconciliation report parameters
 page.title=Reports
-pageReports.button.allReport=All
-pageReports.button.clearButton=Clear
-pageReports.button.label.report=Create report for\:
-pageReports.button.searchButton=Search
-pageReports.button.selectedReport=Selected
-pageReports.hasAccountOnResource=Has account on resource\:
-pageReports.isEnable=Is activated
-pageReports.message.jasperError=Error occurred during creating Jasper report.
-pageReports.message.noResourceSelected=No resource is selected. To continue, you must import any resource.
-pageReports.message.nothingSelected=No object has been selected.
-pageReports.message.queryError=Error occurred during translation search query to filter.
-pageReports.objectType.UserType=User type
-pageReports.objectsType=Select object type
-pageReports.optionsTitle=Options
-pageReports.reportLink=Report link
-pageReports.resourceHelp=To generate the report correctly it is necessary to select any resource.
-pageReports.searchUser=Search text\:
-pageReports.usersFilter=Users filter
