--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/PageResourceImport_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/PageResourceImport_sk_SK.utf8.properties
@@ -1,30 +1,14 @@
-#
-# Copyright (c) 2010-2013 Evolveum
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
-#Wed Jun 06 18:36:11 CEST 2012
-page.title=Import z koncov\u00E9ho syst\u00E9mu
-pageResourceImport.button.back=Sp\u00E4\u0165
+#Thu May 30 10:05:25 CEST 2013
+page.title=Import z koncového systému
+pageResourceImport.button.back=Späť
 pageResourceImport.details=Detaily
-pageResourceImport.finishTime=\u010Cas ukon\u010Denia
-pageResourceImport.lastError=Posledn\u00E1 chyba
-pageResourceImport.lastStatus=Posledn\u00FD stav
-pageResourceImport.launchTime=\u010Cas spustenia
-pageResourceImport.message=Spr\u00E1va
-pageResourceImport.message.cantLoadResource=Nepodarilo sa na\u010D\u00EDta\u0165 koncov\u00FD syst\u00E9m.
-pageResourceImport.numberOfErrors=Po\u010Det ch\u00FDb
-pageResourceImport.progress=Aktu\u00E1lny status
-pageResourceImport.running=Be\u017E\u00ED
-pageResourceImport.timeStamp=\u010Casov\u00E1 zn\u00E1mka
+pageResourceImport.finishTime=Čas ukončenia
+pageResourceImport.lastError=Posledná chyba
+pageResourceImport.lastStatus=Posledný stav
+pageResourceImport.launchTime=Čas spustenia
+pageResourceImport.message=Správa
+pageResourceImport.message.cantLoadResource=Nepodarilo sa načítať koncový systém.
+pageResourceImport.numberOfErrors=Počet chýb
+pageResourceImport.progress=Aktuálny status
+pageResourceImport.running=Beží
+pageResourceImport.timeStamp=Časová známka
