--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageLogging.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageLogging.properties
@@ -19,7 +19,7 @@ pageLogging.appenders=Appenders
 pageLogging.rootLevel=Root logger:
 pageLogging.rootAppender=Root appender:
 pageLogging.audit=Audit
-pageLogging.auditLog=Audit log:
+pageLogging.auditLog=Audit to log file:
 pageLogging.details=Details:
 pageLogging.appender=Appender:
 pageLogging.button.save=Save
