--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem_sk_SK.utf8.properties
@@ -1,20 +1,4 @@
-#
-# Copyright (c) 2010-2013 Evolveum
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
-#Tue Apr 30 12:43:33 CEST 2013
+#Thu May 30 10:05:25 CEST 2013
 page.title=Detaily pracovnej položky
 pageWorkItem.accordionLabel.additionalData=Related data (detailed)
 pageWorkItem.accordionLabel.objectNew=Object after proposed change (detailed)
@@ -28,6 +12,7 @@ pageWorkItem.button.cancel=Zrušiť
 pageWorkItem.button.reject=Zamietnuť (neimpl)
 pageWorkItem.delta=Delta to be approved
 pageWorkItem.description=Pracovná položka
+pageWorkItem.label.showTechnicalInformation=Show technical information
 pageWorkItem.mainInfo=Basic information
 pageWorkItem.objectNew.description=Object after proposed change
 pageWorkItem.objectOld.description=Object before change
