--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_sk_SK.utf8.properties
@@ -1,20 +1,9 @@
-#
-# Copyright (c) 2010-2013 Evolveum
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
-#Fri May 03 16:27:45 CEST 2013
+#Thu May 30 10:05:25 CEST 2013
+ActivationStatusType.ARCHIVED=Archived
+ActivationStatusType.DISABLED=Disabled
+ActivationStatusType.ENABLED=Enabled
+ActivationType.administrativeStatus=Administrative status
+ActivationType.effectiveStatus=Effective status
 ActivationType.enabled=Enabled
 ActivationType.title=Activation
 ActivationType.validFrom=Valid from
@@ -27,6 +16,7 @@ AssignmentPolicyEnforcementType.POSITIVE=Positive
 Boolean.FALSE=False
 Boolean.NULL=Undefined
 Boolean.TRUE=True
+HoursValidator.range=Field '${label}' have to be between ${minimum} and ${maximum}.
 LoggingLevelType.ALL=ALL
 LoggingLevelType.DEBUG=DEBUG
 LoggingLevelType.ERROR=ERROR
@@ -63,6 +53,7 @@ OriginType.SYNC_ACTION=Sync action
 OriginType.USER_ACTION=User action
 OriginType.USER_POLICY=User policy
 OriginType.null=-
+RangeValidator.range=Field '${label}' have to be between ${minimum} and ${maximum}.
 ResourceStatus.DOWN=Down
 ResourceStatus.ERROR=Error
 ResourceStatus.NOT_TESTED=Not tested
