--- a/model/notifications/pom.xml
+++ b/model/notifications/pom.xml
@@ -33,6 +33,11 @@
             <version>2.2-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>com.evolveum.midpoint.model</groupId>
+            <artifactId>workflow-api</artifactId>
+            <version>2.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>com.evolveum.midpoint.repo</groupId>
             <artifactId>repo-api</artifactId>
             <version>2.2-SNAPSHOT</version>
