--- a/model/workflow-impl/pom.xml
+++ b/model/workflow-impl/pom.xml
@@ -51,6 +51,11 @@
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.model</groupId>
+            <artifactId>notifications</artifactId>
+            <version>2.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.evolveum.midpoint.model</groupId>
             <artifactId>model-impl</artifactId>
             <version>2.2-SNAPSHOT</version>
             <type>test-jar</type>
