fix for user valid from/to date range check. MID-1385

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -23,6 +23,8 @@ web.security.provider.unavailable=Currently we are unable to process your reques
 
 WebModelUtils.couldntLoadObject=Couldn't load object.
 
+DateValidator.message.fromAfterTo=Valid from date must be before valid to date.
+
 schema.objectTypes.account=Account
 schema.objectTypes.connector=Connector
 schema.objectTypes.connectorHost=Connector host
