support for connector host delete. MID-1395 also localization update.

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/PageBase_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/PageBase_en_US.utf8.properties
@@ -1,5 +1,6 @@
-#Thu May 30 10:05:31 CEST 2013
+#Fri Jun 07 12:44:24 CEST 2013
 PageBase.button.back=Back
+PageBase.button.delete=Delete
 PageBase.button.run=Run
 PageBase.button.save=Save
 WorkItemsPanel.assigned=Assigned to
