--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/PageResources_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/PageResources_en_US.utf8.properties
@@ -1,7 +1,6 @@
-#Thu May 30 10:05:31 CEST 2013
+#Fri Jun 07 12:44:24 CEST 2013
 page.title=List resources
 pageResources.bundle=Bundle
-pageResources.button.deleteResource=Delete
 pageResources.button.discoveryRemote=Discovery
 pageResources.button.label.connector=Connector
 pageResources.button.label.resource=Resource
@@ -14,10 +13,12 @@ pageResources.connector.title=Connector hosts
 pageResources.content=Content
 pageResources.dialog.title.confirmDelete=Confirm delete
 pageResources.import=Import
+pageResources.message.deleteHostConfirm=Do you really want to delete host '{0}'?
+pageResources.message.deleteHostsConfirm=Do you really want to delete {0} hosts?
 pageResources.message.deleteResourceConfirm=Do you really want to delete selected {0} resource(s)?
 pageResources.message.deleteResourcesConfirm=Do you really want to delete selected {0} resource(s)?
 pageResources.message.noHostSelected=No connector host has been selected.
-pageResources.message.nothingSelected=No resource has been selected.
+pageResources.message.noResourceSelected=No resource has been selected.
 pageResources.name=Name
 pageResources.progress=Progress
 pageResources.status=Status
