--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_en_US.utf8.properties
@@ -1,4 +1,4 @@
-#Thu May 30 10:05:31 CEST 2013
+#Fri Jun 07 12:44:24 CEST 2013
 ActivationStatusType.ARCHIVED=Archived
 ActivationStatusType.DISABLED=Disabled
 ActivationStatusType.ENABLED=Enabled
@@ -16,6 +16,7 @@ AssignmentPolicyEnforcementType.POSITIVE=Positive
 Boolean.FALSE=False
 Boolean.NULL=Undefined
 Boolean.TRUE=True
+DateValidator.message.fromAfterTo=Valid from date must be before valid to date.
 HoursValidator.range=Field '${label}' have to be between ${minimum} and ${maximum}.
 LoggingLevelType.ALL=ALL
 LoggingLevelType.DEBUG=DEBUG
@@ -258,6 +259,7 @@ operation.com.evolveum.midpoint.web.page.admin.resources.PageAdminResources.load
 operation.com.evolveum.midpoint.web.page.admin.resources.PageResource.importFromResource=Import from resource
 operation.com.evolveum.midpoint.web.page.admin.resources.PageResourceEdit.saveResource=Save resource (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.PageResources.connectorDiscovery=Connector discovery (Gui)
+operation.com.evolveum.midpoint.web.page.admin.resources.PageResources.deleteHosts=Delete hosts (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.PageResources.deleteResources=Delete resources (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.PageResources.syncStatus=Synchronization status (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.PageResources.testResource=Test resource (Gui)
