--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/PageResources_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/PageResources_sk_SK.utf8.properties
@@ -1,23 +1,6 @@
-#
-# Copyright (c) 2010-2013 Evolveum
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
-#Sun Feb 10 16:25:54 CET 2013
+#Fri Jun 07 12:44:19 CEST 2013
 page.title=Zoznam koncových systémov
 pageResources.bundle=Balík
-pageResources.button.deleteResource=Zmazať
 pageResources.button.discoveryRemote=Discovery
 pageResources.button.label.connector=Connector
 pageResources.button.label.resource=Systém
@@ -30,10 +13,12 @@ pageResources.connector.title=Konektor hosty
 pageResources.content=Content
 pageResources.dialog.title.confirmDelete=Potvrdenie zmazania
 pageResources.import=Import
+pageResources.message.deleteHostConfirm=Do you really want to delete host '{0}'?
+pageResources.message.deleteHostsConfirm=Do you really want to delete {0} hosts?
 pageResources.message.deleteResourceConfirm=Naozaj chcete zmazať {0} koncové systém(y)?
 pageResources.message.deleteResourcesConfirm=Do you really want to delete selected {0} resource(s)?
 pageResources.message.noHostSelected=No connector host has been selected.
-pageResources.message.nothingSelected=Nebol vybratý koncový systém.
+pageResources.message.noResourceSelected=No resource has been selected.
 pageResources.name=Meno
 pageResources.progress=Aktuálny status
 pageResources.status=Stav
