--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
@@ -21,6 +21,7 @@ pageBase.unknownBuildNumber=unknown
 PageBase.button.save=Save
 PageBase.button.back=Back
 PageBase.button.run=Run
+PageBase.button.delete=Delete
 
 WorkItemsPanel.name=Name
 WorkItemsPanel.assigned=Assigned to
