--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResources.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResources.properties
@@ -30,12 +30,13 @@ pageResources.connector.timeout=Timeout
 pageResources.connector.protectConnection=Protected
 pageResources.connector.title=Connector hosts
 pageResources.button.label.resource=Resource
-pageResources.button.label.connector=Connector
-pageResources.button.deleteResource=Delete
+pageResources.button.label.connector=Connector Host
 pageResources.button.discoveryRemote=Discovery
 
-pageResources.message.deleteResourceConfirm=Do you really want to delete selected {0} resource?
-pageResources.message.deleteResourcesConfirm=Do you really want to delete selected {0} resource(s)?
-pageResources.message.nothingSelected=No resource has been selected.
+pageResources.message.deleteResourceConfirm=Do you really want to delete resource '{0}'?
+pageResources.message.deleteResourcesConfirm=Do you really want to delete {0} resources?
+pageResources.message.deleteHostConfirm=Do you really want to delete host '{0}'?
+pageResources.message.deleteHostsConfirm=Do you really want to delete {0} hosts?
+pageResources.message.noResourceSelected=No resource has been selected.
 pageResources.message.noHostSelected=No connector host has been selected.
 pageResources.dialog.title.confirmDelete=Confirm delete
