--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -295,6 +295,7 @@ operation.com.evolveum.midpoint.web.page.admin.resources.dto.ResourceDtoProvider
 operation.com.evolveum.midpoint.web.page.admin.resources.PageAdminResources.loadResource=Load resource (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.PageResource.importFromResource=Import from resource
 operation.com.evolveum.midpoint.web.page.admin.resources.PageResources.deleteResources=Delete resources (Gui)
+operation.com.evolveum.midpoint.web.page.admin.resources.PageResources.deleteHosts=Delete hosts (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.PageResources.testResource=Test resource (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.PageResources.syncStatus=Synchronization status (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.PageResources.connectorDiscovery=Connector discovery (Gui)
