--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/PageBase_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/PageBase_sk_SK.utf8.properties
@@ -1,5 +1,6 @@
-#Thu May 30 10:05:25 CEST 2013
+#Fri Jun 07 12:44:19 CEST 2013
 PageBase.button.back=Back
+PageBase.button.delete=Delete
 PageBase.button.run=Run
 PageBase.button.save=Save
 WorkItemsPanel.assigned=Assigned to
