fix for MID-1389 (redirecting to the page you have permission to access)

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -20,6 +20,7 @@ web.security.provider.password.bad=User doesn't have defined password.
 web.security.provider.denied=Permission denied.
 web.security.provider.password.encoding=Couldn't authenticate user, reason: couldn't encode password.
 web.security.provider.unavailable=Currently we are unable to process your request. Kindly try again later.
+web.security.provider.access.denied=Access denied. You don't have permission to access, please contact midPoint's administrators.
 
 WebModelUtils.couldntLoadObject=Couldn't load object.
 
