fix for administrative status description in assignments, gui. MID-1429

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -71,9 +71,16 @@ OperationResultStatus.FATAL_ERROR=Fatal error
 OperationResultStatus.NOT_APPLICABLE=Not applicable
 OperationResultStatus.IN_PROGRESS=In progress
 
+
+lower.ActivationStatusType.ENABLED=enabled
+lower.ActivationStatusType.DISABLED=disabled
+lower.ActivationStatusType.ARCHIVED=archived
+lower.ActivationStatusType.null=undefined
+
 ActivationStatusType.ENABLED=Enabled
 ActivationStatusType.DISABLED=Disabled
 ActivationStatusType.ARCHIVED=Archived
+ActivationStatusType.null=Undefined
 
 LoggingLevelType.ALL=ALL
 LoggingLevelType.ERROR=ERROR
