--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -68,8 +68,8 @@
         <jdbc.mysql>5.1.25</jdbc.mysql>
         <wicket.version>6.6.0</wicket.version>
         <groovy.version>1.8.6</groovy.version>
-        <activiti-engine.version>5.12.1</activiti-engine.version>
-        <activiti-spring.version>5.12.1</activiti-spring.version>
+        <activiti-engine.version>5.13</activiti-engine.version>
+        <activiti-spring.version>5.13</activiti-spring.version>
         <commons-email.version>1.3</commons-email.version>
     </properties>
     <dependencyManagement>
@@ -126,6 +126,16 @@
                 <groupId>org.activiti</groupId>
                 <artifactId>activiti-spring</artifactId>
                 <version>${activiti-spring.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-log4j12</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>log4j</groupId>
+                        <artifactId>log4j</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
 				<groupId>org.codehaus.groovy</groupId>
