--- a/model/model-impl/pom.xml
+++ b/model/model-impl/pom.xml
@@ -68,6 +68,11 @@
 			<version>2.2-SNAPSHOT</version>
 		</dependency>
         <dependency>
+            <groupId>com.evolveum.midpoint.model</groupId>
+            <artifactId>workflow-api</artifactId>
+            <version>2.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-ws-security</artifactId>
         </dependency>
