MID-1398 (task description e.g. for system tasks) MID-1410 ('run now' reschedules the task) MID-1419 (user-friendly formatting of notification messages)

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit.properties
@@ -20,6 +20,7 @@ pageTaskEdit.button.save=Save
 pageTaskEdit.button.edit=Edit
 
 pageTaskEdit.name=Task name
+pageTaskEdit.description=Description
 pageTaskEdit.oid=OID
 pageTaskEdit.identifier=Identifier
 pageTaskEdit.category=Category
