Trying to solve MID-1445 (refreshing wf-related information on pages to which we return using Back button). Experimental.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/workflow/PageProcessInstances.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/workflow/PageProcessInstances.properties
@@ -30,6 +30,7 @@ pageProcessInstances.item.status=Status
 pageProcessInstances.notYet=not yet
 
 pageProcessInstances.button.stop=Stop/delete process instance(s)
+pageProcessInstances.button.back=Back
 
 #pageProcessInstances.button.label.item=Process instance:
 pageProcessInstances.message.noItemSelected=No process instance has been selected.
