MID-1461 (stop process instance leaves wf tasks opened) #resolve Fixed a couple of operation result-related bugs in workflow.

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem_en_US.utf8.properties
@@ -7,9 +7,9 @@ pageWorkItem.accordionLabel.processInstance=Process instance information
 pageWorkItem.accordionLabel.requester=Requester (detailed)
 pageWorkItem.additionalData.description=Role to be added
 pageWorkItem.additionalInfo=Supplementary information (do not edit, please)
-pageWorkItem.button.approve=Approve (NotImplYet)
+pageWorkItem.button.approve=Approve
 pageWorkItem.button.cancel=Back
-pageWorkItem.button.reject=Reject (NotImplYet)
+pageWorkItem.button.reject=Reject
 pageWorkItem.delta=Delta to be approved
 pageWorkItem.description=Work Item
 pageWorkItem.label.showTechnicalInformation=Show technical information
