--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItems_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItems_en_US.utf8.properties
@@ -16,10 +16,10 @@
 
 #Fri Nov 02 15:51:05 CET 2012
 page.title=List work items
-pageWorkItems.button.approve=Approve (NotImplYet)
+pageWorkItems.button.approve=Approve
 pageWorkItems.button.claim=Claim
 pageWorkItems.button.label.item=Work item\:
-pageWorkItems.button.reject=Reject (NotImplYet)
+pageWorkItems.button.reject=Reject
 pageWorkItems.button.release=Release
 pageWorkItems.item.candidates=Candidate assignees
 pageWorkItems.item.created=Created on
