fix for MID-1458 (single user reconciliation)

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -286,6 +286,8 @@ operation.com.evolveum.midpoint.web.page.admin.users.PageUsers.disableUser=Disab
 operation.com.evolveum.midpoint.web.page.admin.users.PageUsers.disableUsers=Disable users (Gui)
 operation.com.evolveum.midpoint.web.page.admin.users.PageUsers.enableUser=Enable user (Gui)
 operation.com.evolveum.midpoint.web.page.admin.users.PageUsers.enableUsers=Enable users (Gui)
+operation.com.evolveum.midpoint.web.page.admin.users.PageUsers.reconcileUsers=Reconcile users (Gui)
+operation.com.evolveum.midpoint.web.page.admin.users.PageUsers.reconcileUser=Reconcile user (Gui): {0}
 
 #------- Page OrgStruct -------#
 operation.com.evolveum.midpoint.web.component.orgStruct.BookmarkableFolderContent.loadOrgUnit=Loading organization unit
