--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUsers.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUsers.properties
@@ -26,6 +26,7 @@ pageUsers.search=Search text
 pageUsers.button.clearButton=Clear
 pageUsers.button.searchButton=Search
 pageUsers.message.queryError=Error occurred during translation search query to filter.
+pageUsers.button.reconcile=Reconcile
 pageUsers.button.delete=Delete
 pageUsers.button.disable=Disable
 pageUsers.button.enable=Enable
