implemented time testing page (MID-1478)

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -382,6 +382,7 @@ operation.com.evolveum.midpoint.web.page.admin.configuration.PageImportObject.im
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageImportObject.importXml=Import xml (Gui)
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageLogging.loadLoggingConfiguration=Load logging configuration (Gui)
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageLogging.updateLoggingConfiguration=Update logging configuration (Gui)
+operation.com.evolveum.midpoint.web.page.admin.configuration.PageTimeTest.changeTime=Change time (Gui)
 
 #------- Page Home ----------------#
 operation.com.evolveum.midpoint.web.page.admin.home.PageDashboard.loadUser=Load user (Gui)
