--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAdminConfiguration.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAdminConfiguration.properties
@@ -14,6 +14,7 @@
 # limitations under the License.
 #
 pageAdminConfiguration.logging=Logging
+pageAdminConfiguration.timeTest=Time test
 pageAdminConfiguration.debugView=View object
 pageAdminConfiguration.debugList=Repository objects
 pageAdminConfiguration.importObject=Import object
