--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -373,6 +373,14 @@
             <artifactId>servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        
+        <!-- testing dependencies -->
+        <dependency>
+            <groupId>com.evolveum.midpoint.model</groupId>
+            <artifactId>model-test</artifactId>
+            <version>2.2-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
