updated localization packs keys for en_US and sk_SK

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_en_US.utf8.properties
@@ -1,7 +1,8 @@
-#Fri Jun 07 12:44:24 CEST 2013
+#Tue Jul 16 11:28:12 CEST 2013
 ActivationStatusType.ARCHIVED=Archived
 ActivationStatusType.DISABLED=Disabled
 ActivationStatusType.ENABLED=Enabled
+ActivationStatusType.null=Undefined
 ActivationType.administrativeStatus=Administrative status
 ActivationType.effectiveStatus=Effective status
 ActivationType.enabled=Enabled
@@ -92,6 +93,10 @@ ThreadStopActionType.RESCHEDULE=Reschedule
 ThreadStopActionType.RESTART=Restart
 ThreadStopActionType.SUSPEND=Suspend
 WebModelUtils.couldntLoadObject=Couldn't load object.
+lower.ActivationStatusType.ARCHIVED=archived
+lower.ActivationStatusType.DISABLED=disabled
+lower.ActivationStatusType.ENABLED=enabled
+lower.ActivationStatusType.null=undefined
 operation.class\ com.evolveum.midpoint.model.lens.ChangeExecutor.executeChanges=Execute changes - change executor (Model)
 operation.com.evolveum.midpoint.common.operation.import.object=Import object
 operation.com.evolveum.midpoint.common.policy.PasswordPolicyUtils.passwordValidation=Password validation against password policy
@@ -243,6 +248,7 @@ operation.com.evolveum.midpoint.web.page.admin.configuration.PageImportObject.im
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageImportObject.importXml=Import xml (Gui)
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageLogging.loadLoggingConfiguration=Load logging configuration (Gui)
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageLogging.updateLoggingConfiguration=Update logging configuration (Gui)
+operation.com.evolveum.midpoint.web.page.admin.configuration.PageTimeTest.changeTime=Change time (Gui)
 operation.com.evolveum.midpoint.web.page.admin.help.PageSystem.getRepoDiag=Get repository diagnostics (Gui)
 operation.com.evolveum.midpoint.web.page.admin.help.PageSystem.testRepository=Test repository (Gui)
 operation.com.evolveum.midpoint.web.page.admin.home.PageDashboard.loadAccount=Load account (Gui)
@@ -302,6 +308,8 @@ operation.com.evolveum.midpoint.web.page.admin.users.PageUsers.disableUser=Disab
 operation.com.evolveum.midpoint.web.page.admin.users.PageUsers.disableUsers=Disable users (Gui)
 operation.com.evolveum.midpoint.web.page.admin.users.PageUsers.enableUser=Enable user (Gui)
 operation.com.evolveum.midpoint.web.page.admin.users.PageUsers.enableUsers=Enable users (Gui)
+operation.com.evolveum.midpoint.web.page.admin.users.PageUsers.reconcileUser=Reconcile user (Gui)\: {0}
+operation.com.evolveum.midpoint.web.page.admin.users.PageUsers.reconcileUsers=Reconcile users (Gui)
 operation.com.evolveum.midpoint.web.page.admin.workflow.PageWorkItem.saveWorkItem=Save work item (Gui)
 operation.com.evolveum.midpoint.wf.WfHook.invoke=Workflow hook invocation (Workflow)
 operation.com.evolveum.midpoint.xml.ns._public.model.model_1_wsdl.ModelPortType.addObject=Model web service add object
@@ -338,6 +346,7 @@ schema.objectTypes.systemConfiguration=System configuration
 schema.objectTypes.task=Task
 schema.objectTypes.user=User
 schema.objectTypes.valuePolicy=Value policy
+web.security.provider.access.denied=Access denied. You don't have permission to access, please contact midPoint's administrators.
 web.security.provider.denied=Permission denied.
 web.security.provider.disabled=User is disabled.
 web.security.provider.invalid=Invalid username and/or password.
