--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageAdminConfiguration_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageAdminConfiguration_en_US.utf8.properties
@@ -1,22 +1,7 @@
-#
-# Copyright (c) 2010-2013 Evolveum
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
-#Sat Mar 16 14:26:19 CET 2013
+#Tue Jul 16 11:28:12 CEST 2013
 pageAdminConfiguration.debugList=Repository objects
 pageAdminConfiguration.debugView=View object
 pageAdminConfiguration.importObject=Import object
 pageAdminConfiguration.logging=Logging
 pageAdminConfiguration.systemConfiguration=Configuration
+pageAdminConfiguration.timeTest=Time test
