--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit_en_US.utf8.properties
@@ -1,20 +1,4 @@
-#
-# Copyright (c) 2010-2013 Evolveum
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
-#Tue Apr 30 12:44:04 CEST 2013
+#Tue Jul 16 11:28:12 CEST 2013
 page.title=Task details
 pageTaskEdit.bound=Tightly bound (use if recurring task runs often) 
 pageTaskEdit.boundHelp=Tightly bound tasks are used to run short actions, which are repeating quite often (e.g. in intervals less than 1 minute). A typical example is the live synchronization. Cron-like specification is not supported for these tasks; you have to specify the time interval. 
@@ -25,6 +9,7 @@ pageTaskEdit.category=Category
 pageTaskEdit.cronHelp=Cron-like specification is in the form\: SECONDS MINUTES HOURS DAY-OF-MONTH MONTH DAY-OF-WEEK YEAR (optional), e.g. '0 0 12 ? * WED' which means 'every Wednesday at 12\:00\:00 pm'. For more information, please see www.quartz-scheduler.org/documentation/quartz-2.1.x/tutorials/tutorial-lesson-06.
 pageTaskEdit.cronHelpLink=For more information, please see 
 pageTaskEdit.cronSpec=Schedule cron-like specification
+pageTaskEdit.description=Description
 pageTaskEdit.execution=Execution status
 pageTaskEdit.handlerUri=Handler URI
 pageTaskEdit.identifier=Identifier
