--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageProcessInstances_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageProcessInstances_sk_SK.utf8.properties
@@ -1,8 +1,9 @@
-#Thu May 30 10:05:25 CEST 2013
+#Tue Jul 16 11:28:20 CEST 2013
 PageProcessInstancesRequestedBy.title=Process instances corresponding to my requests
 PageProcessInstancesRequestedFor.title=Process instances corresponding to requests about me
 pageProcessInstances.active=Currently active
 pageProcessInstances.before=before
+pageProcessInstances.button.back=Back
 pageProcessInstances.button.stop=Stop/delete process instance(s)
 pageProcessInstances.finished=Recently finished
 pageProcessInstances.item.candidates=Candidate assignees
