new parameter for audit report

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -82,6 +82,19 @@ ActivationStatusType.DISABLED=Disabled
 ActivationStatusType.ARCHIVED=Archived
 ActivationStatusType.null=Undefined
 
+AuditEventType.GET_OBJECT=Get object
+AuditEventType.ADD_OBJECT=Add object
+AuditEventType.MODIFY_OBJECT=Modify object
+AuditEventType.DELETE_OBJECT=Delete object
+AuditEventType.SYNCHRONIZATION=Synchronization
+AuditEventType.EXECUTE_CHANGES_RAW=Execute changes raw
+AuditEventType.CREATE_SESSION=Create session
+AuditEventType.TERMINATE_SESSION=Terminate session
+AuditEventType.WORK_ITEM=Work item
+AuditEventType.WORKFLOW_PROCESS_INSTANCE=Workflow process instance
+AuditEventType.RECONCILIATION=Reconciliation
+
+
 LoggingLevelType.ALL=ALL
 LoggingLevelType.ERROR=ERROR
 LoggingLevelType.WARN=WARN
