minor update for MID-1509 but still not working through IDE as expected.

--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -597,6 +597,7 @@
                         <configuration>
                             <doCheck>false</doCheck>
                             <doUpdate>false</doUpdate>
+                            <revisionOnScmFailure>Unknown</revisionOnScmFailure>
                         </configuration>
                     </plugin>
                     <plugin>
