audit report popup improvements, localization

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -82,6 +82,7 @@ ActivationStatusType.DISABLED=Disabled
 ActivationStatusType.ARCHIVED=Archived
 ActivationStatusType.null=Undefined
 
+AuditEventType.null=All
 AuditEventType.GET_OBJECT=Get object
 AuditEventType.ADD_OBJECT=Add object
 AuditEventType.MODIFY_OBJECT=Modify object
