MID-1507 #close (in-progress account modify notifications). Component loggers for workflows and notifications.

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageLogging_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageLogging_en_US.utf8.properties
@@ -50,6 +50,8 @@ pageLogging.logger.PROVISIONING=Provisioning logger
 pageLogging.logger.REPOSITORY=Repository logger
 pageLogging.logger.RESOURCEOBJECTCHANGELISTENER=Resource object change listener logger
 pageLogging.logger.TASKMANAGER=Task manager logger
+pageLogging.logger.WORKFLOWS=Workflow module logger
+pageLogging.logger.NOTIFICATIONS=Notifications logger
 pageLogging.loggers=Loggers
 pageLogging.loggersAppender=Appender
 pageLogging.loggersLevel=Level
