--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageLogging_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageLogging_sk_SK.utf8.properties
@@ -50,6 +50,8 @@ pageLogging.logger.PROVISIONING=Provisioning
 pageLogging.logger.REPOSITORY=Repository
 pageLogging.logger.RESOURCEOBJECTCHANGELISTENER=Resource object change listener
 pageLogging.logger.TASKMANAGER=Task manager
+pageLogging.logger.WORKFLOWS=Workflow module logger
+pageLogging.logger.NOTIFICATIONS=Notifications logger
 pageLogging.loggers=Loggers
 pageLogging.loggersAppender=Appender
 pageLogging.loggersLevel=Level
