--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageLogging.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageLogging.properties
@@ -68,6 +68,8 @@ pageLogging.logger.REPOSITORY=Repository logger
 pageLogging.logger.GUI=Web logger
 pageLogging.logger.TASKMANAGER=Task manager logger
 pageLogging.logger.RESOURCEOBJECTCHANGELISTENER=Resource object change listener logger
+pageLogging.logger.WORKFLOWS=Workflow module logger
+pageLogging.logger.NOTIFICATIONS=Notifications logger
 
 logger.emptyLogger=Logger must not be empty
 logger.duplicate=Logger with name '{0}' is already defined
