--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -431,6 +431,9 @@ operation.com.evolveum.midpoint.model.controller.ModelDiagController.repositoryS
 operation.com.evolveum.midpoint.model.controller.ModelDiagController.repositorySelfTest.user.searchObjects.employeeType=Search objects - employeeType (Model)
 operation.com.evolveum.midpoint.model.controller.ModelDiagController.repositorySelfTest.user.searchObjects.organization=Search objects - organization (Model)
 
+com.evolveum.midpoint.notifications.transports.MailTransport.send=Send mail (Notifications)
+com.evolveum.midpoint.notifications.transports.SimpleSmsTransport.send=Send SMS (Notifications)
+
 operation.com.evolveum.midpoint.web.page.admin.help.PageSystem.testRepository=Test repository (Gui)
 operation.com.evolveum.midpoint.web.page.admin.help.PageSystem.getRepoDiag=Get repository diagnostics (Gui)
 operation.com.evolveum.midpoint.web.component.prism.ObjectWrapper.createContainers=Create containers (Gui)
